--- a/.github/workflows/check-lint-and-format.yaml
+++ b/.github/workflows/check-lint-and-format.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_dev.txt
+          pip install -r requirements.dev.txt
 
       - name: Run Flake8 analysis
         run: |
